# options-market-maker

./: README.md  ci.yml  pyproject.toml
.github/workflows/: ci.yml
options-market-maker/: .gitignore  README.md
options-market-maker/src/backtest/: __init__.py  engine.py  scenario.py
options-market-maker/src/hedging/: __init__.py  portfolio.py
options-market-maker/src/pricing/: __init__.py  black_scholes.py  greeks.py  implied_vol.py
options-market-maker/src/quoting/: market_maker.py
options-market-maker/src/risk/: __init__.py  metrics.py
scripts/: run_backtest.py
src/hedging/: delta_hedger.py
src/pricing/: surface.py
src/quoting/: __init__.py  skew.py
src/risk/: limits.py
test/: conftest.py  test_backtest.py  test_black_scholes.py  test_hedger.py  test_implied_vol.py
